--- a/package.json
+++ b/package.json
@@ -82,4 +82,7 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
   }
+} 
+"scripts": {
+  "build": "vite build && cp dist/index.html dist/404.html"
 }
